fix bug #46849 (Cloning DOMDocument doesn't clone the properties) fix some warnings add test